[gd_scene load_steps=4 format=3 uid="uid://cli44osk288cl"]

[ext_resource type="Script" path="res://device/deviceBounds.gd" id="1_n43we"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fn4w5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ha73f"]
size = Vector2(200, 27)

[node name="DeviceBounds" type="Node2D"]
script = ExtResource("1_n43we")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(320, 640)

[node name="Shape" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_fn4w5")

[node name="Color" type="ColorRect" parent="Floor"]
offset_left = -319.0
offset_right = 324.0
offset_bottom = 40.0
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(0, 320)
rotation = 1.5708

[node name="Shape" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("WorldBoundaryShape2D_fn4w5")

[node name="Color" type="ColorRect" parent="LeftWall"]
offset_left = -319.0
offset_right = 324.0
offset_bottom = 40.0
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(640, 320)
rotation = -1.5708

[node name="Shape" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("WorldBoundaryShape2D_fn4w5")

[node name="Color" type="ColorRect" parent="RightWall"]
offset_left = -319.0
offset_right = 324.0
offset_bottom = 40.0
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(320, 0)
rotation = 3.14159

[node name="Shape" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("WorldBoundaryShape2D_fn4w5")

[node name="Color" type="ColorRect" parent="Ceiling"]
offset_left = -319.0
offset_right = 324.0
offset_bottom = 40.0
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="OutputSink" type="Area2D" parent="."]
position = Vector2(320, 640)

[node name="Shape" type="CollisionShape2D" parent="OutputSink"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_ha73f")

[node name="InputFaucet" type="Node2D" parent="."]
position = Vector2(320, -88)

[connection signal="body_entered" from="OutputSink" to="." method="_on_output_sink_body_entered"]
